Bugs and Fixes 23-Oct-2025
